plugins {
    id 'org.springframework.boot' version '2.2.4.RELEASE'
    id 'io.spring.dependency-management' version '1.0.10.RELEASE'
    id 'org.openjfx.javafxplugin' version '0.0.8'
    id 'org.beryx.jlink' version '2.22.0'
}
group 'group'
sourceCompatibility = '14'
targetCompatibility = '14'
mainClassName = 'mod/app.Main'
jar {
    enabled = true;
    manifest.attributes('Main-Class': 'mod/app.Main')
}

repositories {
    jcenter()
    mavenCentral()
    mavenLocal()
}
javafx {
    version = '14.0.1'
    modules = [ 'javafx.controls']
}
jlink {
    addOptions('--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages')
    launcher {
        name = 'start-app'
        customImage {
            appModules = ['group.merged.module']
        }
        jvmArgs = [
                '--add-reads', 'group.merged.module=mod',
                '-cp', '../app/*'
        ]
    }
    mergedModule {
        additive = true
        uses 'ch.qos.logback.classic.spi.Configurator'
    }
    jpackage {
        imageName = 'start-app'
        skipInstaller = true
        installerName = 'start-app'
        installerType = 'pkg'
    }
    forceMerge('log4j-api')
}

dependencies {
    implementation 'mysql:mysql-connector-java:8.0.16'
    implementation 'com.h2database:h2:1.4.200'
    implementation 'org.jasypt:jasypt:1.9.3'
    implementation ('org.controlsfx:controlsfx:11.0.2'){exclude group: 'org.openjfx'}
    implementation 'javax.servlet:javax.servlet-api:4.0.1'
    implementation 'org.springframework.boot:spring-boot-starter'
}
